SDN и зеленые ЦОД

--- a/inc/0-bibliography.tex
+++ b/inc/0-bibliography.tex
@@ -57,15 +57,27 @@
     Федеральный закон от 21 июля 2014 г. № 242-ФЗ <<О внесении изменений в отдельные законодательные акты Российской Федерации в части уточнения порядка обработки персональных данных в информационно-телекоммуникационных сетях>> //
     Минкомсвязь России //
     Опубликован 12.02.2016 на официальном интернет-портале Министерства связи и массовых коммуникаций Российской Федерации
-    URL: http://minsvyaz.ru/ru/personaldata/
+    URL: http://minsvyaz.ru/ru/personaldata
     (дата обращения: 30.12.2016)
 
 \bibitem{cnews}
     Облачные сервисы 2016
     [Электронный ресурс] //
     CNews Analytics
-    URL: http://www.cnews.ru/reviews/oblachnye\_servisy\_2016/
+    URL: https://goo.gl/cmDSMB
     (дата обращения: 30.12.2016)
+
+\bibitem{cnewsdc}
+    ИТ-инфраструктура предприятия 2010: Пути оптимизации
+    [Электронный ресурс] //
+    CNews Analytics
+    URL: https://goo.gl/jzrrIO
+    (дата обращения: 05.01.2017)
+
+\bibitem{greendc}
+    Kaplan, J. M., Forrest, W., \& Kindler, N.
+    Revolutionizing data center energy efficiency.
+    Technical report, McKinsey \& Company, 2008. -- 15p.
 
 \end{thebibliography}
 \endgroup
