--- a/inc/0-glossary.tex
+++ b/inc/0-glossary.tex
@@ -74,4 +74,6 @@
 
 \hypertarget{iot}{IoT --- Internet of Things, интернет вещей}
 
+\hypertarget{sdn}{SDN --- Software-defined Networking, программно-определяемая сеть}
+
 \clearpage
