--- a/inc/2-literature.tex
+++ b/inc/2-literature.tex
@@ -218,7 +218,7 @@ DigitalOcean предоставляет и другие функции, таки
 
 На российском рынке облачного хостинга все еще наблюдается большой рост.
 В связи с тем, что нет явно выраженного монополиста, таких как Amazon, Rackspace, Terramark, российский рынок очень разнообразный.
-Конкуренция на рынке способствует значительному повышению качества предоставляемых услуги, а также гибкие тарифные планы и широкий перечень дополнительных услуг.
+Конкуренция на рынке способствует значительному повышению качества предоставляемых услуг, а также гибкие тарифные планы и широкий перечень дополнительных услуг.
 
 Также важную роль играет принятие Федерального закона от 21 июля 2014 г. № 242-ФЗ <<О внесении изменений в отдельные законодательные акты Российской Федерации в части уточнения порядка обработки персональных данных в информационно-телекоммуникационных сетях>> \cite{minsvyaz}.
 Крупные компании обязаны хранить персональные данные пользователй на территории России, что способствует консолидации российского рынка облачных услуг.
@@ -292,32 +292,55 @@ DigitalOcean предоставляет и другие функции, таки
   \end{tabular}
 \end{table}
 
---------------------------
+Все центры обработки данных сталкиваются с проблемой вывода тепловой энергии, являющейся побочным теплом от плотно укомплектованных серверных стоек.
+Общий экономический и экологический эффект высокого потребления электроэнергии подогревает интерес к так называемым <<зеленым>> ЦОД \cite{cnewsdc}.
 
-\addimg{vnet}{1}{Тестовая картиночка 1}{vnet}
+Электроэнергия является одной из главных расходных статей в проектировании ЦОД, таких крупных компаний как Google, eBay, Microsoft, Amazon и прочих.
 
-+ что такое облака
+В 2008 году компания McKinsey \& Company провела аналитический обзор выбросов углекислого газа от выработки электроэнергии для нужд ЦОД \cite{greendc}.
+Согласно исследованиям, суммарные показатели выброса углекислого газа ЦОД равны выбросам такой страны как Аргентина.
 
-+ сравнение облаков 2014/16
+<<Озеленение>> дата-центров может происходить за счет использования альтернативных возобновляемых источников энергии (солнце, ветер).
+В мире уже имеется ряд ЦОД, успешно использующих этот подход.
+Первый дата-центр в США, который полностью обеспечивает мощности для своих серверов за счет энергии ветра от рядом расположенной турбины расположен в штате Иллинойс.
 
-+ технологии облачных вычислений
+Компания Other World Computing в 2009 году начала использовать 40-метровую ветровую турбину для обеспечения всей электрической мощности для своего здания в Вудстоке, где находится штаб-квартира компании и ЦОД.
 
-+ saas/paas/iaas
+Сервис Microsoft Virtual Earth управляется вне дата-центра, в контейнере, расположенном в штате Колорадо, который полностью питается возобновляемой энергией ветра.
+Microsoft использует выгодное преимущество использования контейнеров: их легко можно поместить рядом с источником возобновляемой энергии, что позволяет компании и сокращать выбросы углекислого газа.
 
-+ гибрдное/публ/прив облако
+Все большее количество дата-центров направляет тепло из своих помещений в находящиеся неподалеку дома, офисы, оранжереи, бассейны.
+Возможность заново использовать излишнее тепло от серверов предусматривается на этапе разработки нового дата-центра, помогая повысить энергетическую эффективность оборудования.
 
-+ стандартизация nist
+Компания Microsoft в рамках Project Natick создала прототип ЦОД под названием Leona Philpot.
+Прототип серверной фермы был погружен в километре от тихоокеанского побережья США и успешно эксплуатировался на протяжении четырех месяцев.
+Leona Philpot был снабжен большим количеством теплообменников, которые в свою очередь передавали излишнее тепло от серверов в холодную воду.
 
-+ облачные провайдеры
+Инженеры Microsoft утверждают, что такой способ оптимизации температурного режима серверного оборудования является одним из наиболее эффективных и в то же время дешевых методов охлаждения серверных ферм.
 
-+ специфика облаков в России
+Помимо <<зеленых>> ЦОД одним из трендов последних лет является Software-defined Networking (\hyperlink{sdn}{SDN}).
+Основными трендами развития корпоративных сетей и сетей центров обработки данных являются:
+\begin{itemize}
+  \item рост объемов трафика и изменение его структуры;
+  \item рост числа пользователей мобильных приложений и социальных сетей;
+  \item высокопроизводительные кластеры для обработки большого количества данных (Big Data);
+  \item виртуализация для предоставления облачных услуг.
+\end{itemize}
 
-* тенденции развития облаков в мире (зеленые цоды, уход в виртуализированные хранилища и сети) пример картинки какой-то
+Программно-конфигурируемая сеть --- сеть передачи данных, в которой уровень управления сетью отделен от устройств передачи данных и реализуется программно, одна из форм виртуализации вычислительных ресурсов (рис. \ref{vnet}).
 
-* кратко по безопасности, основные пункты, кем регламентируется, как обеспечивается
+\addimg{vnet}{1}{Схема программно-конфигурируемой сети}{vnet}
 
-Тут 10-20 страниц, без подпунктов, сплошной текст с картиночками, в общем теория.
+Если рассмотреть современный маршрутизатор или коммутатор, то он логически состоит из трех компонентов:
+\begin{itemize}
+  \item уровень управления --- это командный интерфейс, встроенный веб-сервер или API и протоколы управления, задача этого уровня обеспечить управляемость устройством;
+  \item уровень управления трафиком --- это различные алгоритмы и функционал задачей которого является автоматическая реакция на изменения трафика;
+  \item передача трафика --- функционал обеспечивающий физическую передачу данных, уровень микросхем и сетевых пакетов.
+\end{itemize}
 
-* конкретный упор на безопасность уже в описании работы
+OpenFlow является стандартным протоколом, использующийся в построении SDN.
+Коммутаторы с поддержкой OpenFlow выпускает компания Hewlett-Packard.
+Компания считает, что SDN должна строиться на базе открытых стандартах, чтобы каждый желающий мог в этом поучаствовать.
+Такая открытая экосистема позволит возобновить процесс внедрения инноваций в области сетевых технологий.
 
 \clearpage
