--- a/inc/0-bibliography.tex
+++ b/inc/0-bibliography.tex
@@ -6,14 +6,13 @@
     Прудникова, А.А.
     Безопасность облачных вычислений /
     А.А. Прудникова //
-    Мир телекома. -- 2013. - №1.
-    -- С.50-55.
+    Мир телекома. -- 2013. -- №1. -- С. 50-55.
 
 \bibitem{sys-analyz}
     Методические указания <<Процедура системного анализа при проектировании программных систем>>
     для студентов-дипломников дневной и заочной формы обучения специальности 7.091501 /
     Сост.: Сергеев Г.Г., Скатков А.В., Мащенко Е.Н. -- Севастополь:
-    Изд-во СевНТУ, 2005. -- 32с.
+    Изд-во СевНТУ, 2005. -- 32 с.
 
 \bibitem{var-analyz}
     Методические указания к расчетно-графическому заданию
@@ -21,63 +20,60 @@
     для студентов специальности 7.091501 <<Компьютерные системы и сети>>
     дневной и заочной формы обучения /
     Сост.: Ю.Н. Щепин -- Севастополь:
-    Изд-во СевНТУ, 2008. -- 28с.
+    Изд-во СевНТУ, 2008. -- 28 с.
 
 \bibitem{nist}
     Hogan, M., Liu, F., Sokol, A., Tong, J.
     NIST Cloud Computing Standarts Roadmap /
     NIST Special Publication 500-291, Version 2
-    Roadmap Working Group, 2013. -- 113p.
+    Roadmap Working Group, 2013. -- 113 с.
 
 \bibitem{gemalto}
     The 2016 Global Cloud Data Security Study.
-    Ponemon Insitute LLC, 2016. -- 40p.
+    Ponemon Insitute LLC, 2016. -- 40 с.
 
 \bibitem{itmo}
-    Беккер М.Я., Гатчин Ю.А., Кармановский Н.С., Терентьев А.О., Федоров Д.Ю.
+    Беккер, М.Я.,
     Информационная безопасность при облачных вычислениях: проблемы и перспективы /
     М.Я. Беккер, Ю.А. Гатчин, Н.С. Кармановский, А.О. Терентьев, Д.Ю. Федоров //
-    Научно-технический вестник Санкт-Петербургского государственного университета информационных технологий, механики и оптики. -- 2011. - №1(71).
-    -- С.97-102.
+    Научно-технический вестник Санкт-Петербургского государственного университета информационных технологий, механики и оптики. -- 2011. -- №1(71). -- С. 97-102.
 
 \bibitem{psta}
-    Емельянова Ю.Г., Фраленко В.П.
-    Анализ проблем и перспективы создания интеллектуальной системы обнаружения и предотвращения сетевых атак на облачные вычисления /
+    Емельянова, Ю.Г.
+    Анализ проблем и перспективы создания интеллектуальной системы обнаружения и предотвращения сетевых атак на облачные вычисления [Текст] /
     Ю.Г. Емельянова, В.П. Фраленко //
-    Программные системы: теория и приложения. -- 2011. - №4(8)
-    -- С.17-31.
+    Программные системы: теория и приложения. -- 2011. -- №4(8) -- С. 17-31.
 
 \bibitem{xen}
     Chisnall, D.
     The Definitive Guide to the Xen Hypervisor /
+    D. Chisnall. --
     1st Edition //
-    Prentice Hall Open Source Software Development. -- 2007. -- 320p.
+    Prentice Hall Open Source Software Development, 2007. -- 320 с.
 
 \bibitem{minsvyaz}
     Федеральный закон от 21 июля 2014 г. № 242-ФЗ <<О внесении изменений в отдельные законодательные акты Российской Федерации в части уточнения порядка обработки персональных данных в информационно-телекоммуникационных сетях>> //
     Минкомсвязь России //
     Опубликован 12.02.2016 на официальном интернет-портале Министерства связи и массовых коммуникаций Российской Федерации
-    URL: http://minsvyaz.ru/ru/personaldata
-    (дата обращения: 30.12.2016)
 
 \bibitem{cnews}
     Облачные сервисы 2016
-    [Электронный ресурс] //
+    [Электронный ресурс]. --
     CNews Analytics
-    URL: https://goo.gl/cmDSMB
-    (дата обращения: 30.12.2016)
+    Режим доступа: https://goo.gl/cmDSMB
+    (Дата обращения: 30.12.2016)
 
 \bibitem{cnewsdc}
     ИТ-инфраструктура предприятия 2010: Пути оптимизации
     [Электронный ресурс] //
     CNews Analytics
-    URL: https://goo.gl/jzrrIO
-    (дата обращения: 05.01.2017)
+    Режим доступа: https://goo.gl/jzrrIO
+    (Дата обращения: 05.01.2017)
 
 \bibitem{greendc}
-    Kaplan, J. M., Forrest, W., \& Kindler, N.
-    Revolutionizing data center energy efficiency.
-    Technical report, McKinsey \& Company, 2008. -- 15p.
+    Kaplan, J., Forrest, W., Kindler, N.
+    Revolutionizing data center energy efficiency. //
+    Technical report, McKinsey \& Company, 2008. -- 15 с.
 
 \end{thebibliography}
 \endgroup
