--- a/inc/2-literature.tex
+++ b/inc/2-literature.tex
@@ -256,7 +256,7 @@ DigitalOcean предоставляет и другие функции, таки
 \begin{table}[H]
   \caption{Крупнейшие поставщики IaaS в 2016 году}\label{iaas-table}
   \begin{tabular}{|p{0.5cm}|p{2.5cm}|p{3.5cm}|p{3.5cm}|p{4.5cm}|}
-  \hline \# & Название компании & Выручка IaaS в 2015 г. (тыс.р.) & Выручка IaaS в 2014 г. (тыс.р.) & Дата-центры \\
+  \hline \# & Название компании & Выручка IaaS в 2015 г. (тыс.р.) & Выручка IaaS в 2014 г. (тыс.р.) & ЦОД \\
   \hline 1 & ИТ-Град & 857 245 & 358 680 & Datalahti, DataSpace, SDN, AHOST \\
   \hline 2 & Крок & 667 609 & 440 315 & Волочаевская-1/2, Компрессор \\
   \hline 3 & Ай-Теко & 618 500 & 565 800 & ТрастИнфо \\
