--- a/inc/5-description.tex
+++ b/inc/5-description.tex
@@ -1,4 +1,4 @@
-\section{ОПИСАНИЕ РАБОТЫ, ПОКА ХЗ ЧТО ТУТ}
+\section{ОПИСАНИЕ РАБОТЫ, ПОКА НЕ ЗНАЮ ЧТО ТУТ}
 
 Пока я только знаю что тут примерно 20 страниц должно быть. Тут само исследование работы.
 
