--- a/main.tex
+++ b/main.tex
@@ -9,30 +9,6 @@
 %%% Начало документа
 \begin{document}
 
-%%ПЛАН
-\iffalse
-Пояснительная записка - 1стр
-Бланк задания - 2стр
-Аннотация - 1стр
-Содержание - 2стр
-Введение - 1стр
-1. Постановка задачи - 2стр
-2. Обзор литературных источников по тематике исследования - 10-20стр
-3. Системный анализ - 10стр
-4. Вариантный анализ - 10-20стр
-5. Описание работы с подпунктами - 20стр
-6. Анализ полученных результатов - 2стр
-Заключение - 1стр
-Перечень сокращений и условных обозначений - 1стр
-Библиографический список - 2-3стр
-Список иллюстративного материала - 1стр
-Приложение А ...
-Приложение Б ...
-~85 страниц без приложений, вместе с ними под 100стр
-
-СИСТЕМНЫЙ И ВАРИАНТНЫЙ АНАЛИЗ ДЕЛАЕМ В ПОСЛЕДНЮЮ ОЧЕРЕДЬ
-\fi
-
 %\includepdf{pz} % Пояснительная записка
 %\includepdf[pages={1,2}]{task} % Задание на диплом печатается на одном листе с двух сторон
 %помимо ПЗ и задания, в диплом также вкладывается отзыв руководителя и рецензия
@@ -47,7 +23,7 @@
 \input{inc/2-literature} % Обзор литературных источников по тематике исследования
 %\input{inc/3-sysanalyz} % Системный анализ
 %\input{inc/4-varanalyz} % Вариантный анализ
-\input{inc/5-description} % ОПИСАНИЕ РАБОТЫ, ПОКА ХЗ ЧТО ТУТ
+\input{inc/5-description} % ОПИСАНИЕ РАБОТЫ, ПОКА НЕ ЗНАЮ ЧТО ТУТ
 \input{inc/6-results} % Анализ полученных результатов
 \input{inc/0-conclusion} % Заключение
 \input{inc/0-glossary} % Перечень сокращений и условных обозначений
