--- a/preamble.tex
+++ b/preamble.tex
@@ -95,7 +95,7 @@
 
 % Список иллюстративного материала
 \renewcommand{\cftloftitlefont}{\hspace{0.17\textwidth}\MakeTextUppercase}
-%\renewcommand{\cftfigfont}{Рисунок }
+\renewcommand{\cftfigfont}{Рисунок }
 \addto\captionsrussian{\renewcommand\listfigurename{Список иллюстративного материала}}
 
 % Нумерация страниц справа сверху
@@ -204,5 +204,4 @@
 \makeatother
 
 % \usepackage{lastpage} % Подсчет количества страниц, если нужно
-
 \setcounter{page}{4} % Начало нумерации страниц
