Исправление копипаст на свои мысли

--- a/inc/0-bibliography.tex
+++ b/inc/0-bibliography.tex
@@ -52,13 +52,13 @@
     Prentice Hall Open Source Software Development, 2007. -- 320 с.
 
 \bibitem{minsvyaz}
-    Федеральный закон от 21 июля 2014 г. № 242-ФЗ <<О внесении изменений в отдельные законодательные акты Российской Федерации в части уточнения порядка обработки персональных данных в информационно-телекоммуникационных сетях>> //
+    Федеральный закон от 21 июля 2014 г. № 242-ФЗ <<О внесении изменений в отдельные законодательные акты Российской Федерации в части уточнения порядка обработки персональных данных в информационно-телекоммуникационных сетях>> /
     Минкомсвязь России //
     Опубликован 12.02.2016 на официальном интернет-портале Министерства связи и массовых коммуникаций Российской Федерации
 
 \bibitem{cnews}
     Облачные сервисы 2016
-    [Электронный ресурс]. --
+    [Электронный ресурс] //
     CNews Analytics
     Режим доступа: https://goo.gl/cmDSMB
     (Дата обращения: 30.12.2016)
