--- a/inc/5-description.tex
+++ b/inc/5-description.tex
@@ -1,5 +1,11 @@
 \section{ОПИСАНИЕ РАБОТЫ, ПОКА НЕ ЗНАЮ ЧТО ТУТ}
 
+П.С.
+После обзора литературы следующий пункты системный анализ и вариативный анализ.
+Я их буду делать только как закончу основную часть диплома.
+
+---
+
 Пока я только знаю что тут примерно 20 страниц должно быть. Тут само исследование работы.
 
 Все это должно быть с подпунктами.
@@ -132,6 +138,8 @@ ntp - только на винде позволяет устроить ддос
 Также в безопасность входят бекапы, фейловеры, все что соответствует SLA.
 Тут возможно сделать что-то с SDN и SDS, надо почитать.
 
+
+На этот листинг можно пока не обращать внимания, я его для себя скопировал, как эксплуатировать уязвимость в ядре и получить рут-права.
 
 \begin{lstlisting}
 ETO CHISTIJ ISO CENTOS 7.2
