--- a/inc/0-bibliography.tex
+++ b/inc/0-bibliography.tex
@@ -40,7 +40,7 @@
 
 \bibitem{psta}
     Емельянова, Ю.Г.
-    Анализ проблем и перспективы создания интеллектуальной системы обнаружения и предотвращения сетевых атак на облачные вычисления [Текст] /
+    Анализ проблем и перспективы создания интеллектуальной системы обнаружения и предотвращения сетевых атак на облачные вычисления /
     Ю.Г. Емельянова, В.П. Фраленко //
     Программные системы: теория и приложения. -- 2011. -- №4(8) -- С. 17-31.
 
