Добавил информацию по АЭС

--- a/inc/0-glossary.tex
+++ b/inc/0-glossary.tex
@@ -70,4 +70,6 @@
 
 \hypertarget{sdn}{SDN --- Software-defined Networking, программно-определяемая сеть}
 
+\hypertarget{aes}{АЭС --- атомная электростанция}
+
 \clearpage
