--- a/inc/2-literature.tex
+++ b/inc/2-literature.tex
@@ -300,12 +300,12 @@ DigitalOcean предоставляет и другие функции, таки
   \end{tabular}
 \end{table}
 
-В настоящее время одними из основных трендов в сфере ИТ, в частности в облачных вычислениях являются <<зеленые>> центры обработки данных и программно-конфигурируемые сети или Software-defined Networking (\hyperlink{sdn}{SDN}).
+В настоящее время одними из основных тенденций развития в сфере ИТ, в облачных вычислениях в частности, являются <<зеленые>> центры обработки данных и программно-конфигурируемые сети или Software-defined Networking (\hyperlink{sdn}{SDN}).
 
 Все центры обработки данных сталкиваются с проблемой вывода тепловой энергии.
 Тепловая энергия являет побочным действием от эксплуатации плотно укомплектованных серверных стоек.
 Для охлаждения ЦОД необходимо большое количество холодильных установок, которые потребляют количество энергии сравнимое с некоторыми городами \cite{cnewsdc}.
-Крупные компании хотят строить центры обработки данных в северных странах, таких как Исландия и Финляндия, однако удаленность от крупных магистральных сетевых точек и недостаток квалифицированных кадров для обслуживания ЦОД замедляют данный тренд.
+Крупные компании хотят строить центры обработки данных в северных странах, таких как Исландия и Финляндия, однако удаленность от крупных магистральных сетевых точек и недостаток квалифицированных кадров для обслуживания ЦОД замедляют развитие данной тенденции.
 Тепло, выделяемое дата-центром можно использовать для обогрева близлежащих жилых комплексов.
 Возможность заново использовать излишнее тепло от серверов предусматривается на этапе разработки нового ЦОД, помогая повысить энергетическую эффективность оборудования.
 
@@ -324,7 +324,14 @@ DigitalOcean предоставляет и другие функции, таки
 Большое количество теплообменников, которыми был оснащен Leona Philpot, передавали лишнее тепло от серверов в воду.
 При этом по оценкам экологов, это не влияет на глобальное повышение на температуру воды в мировом океане.
 
-Основными трендами развития корпоративных сетей и сетей центров обработки данных являются:
+Бывший сотрудник компании Google Джон Данн предложил использовать уже не работающую электростанцию в качестве нового ЦОД.
+Атомная электростанция (\hyperlink{aes}{АЭС}) Vermont Yankee использовалась с 1972 по 2014 года.
+Так как АЭС находится близко к водным ресурсам и железной дороге, необходимо было лишь преобразовать здание и подвести к ЦОД сетевую инфраструктуру.
+
+В России существует проект строительства ЦОД рядом с Калининской АЭС.
+Таким образом корпорация Росэнергоатом обеспечит бесперебойным надежным источником электроэнергии для 4800 серверных стоек.
+
+Основными тенденциями развития корпоративных сетей и сетей центров обработки данных являются:
 \begin{itemize}
   \item рост объемов трафика, изменение структуры трафика;
   \item рост числа пользователей мобильных приложений и социальных сетей;
