--- a/main.tex
+++ b/main.tex
@@ -21,8 +21,8 @@
 \input{inc/0-intro} % Введение
 \input{inc/1-pz} % Постановка задачи
 \input{inc/2-literature} % Обзор литературных источников по тематике исследования
-%\input{inc/3-sysanalyz} % Системный анализ
-%\input{inc/4-varanalyz} % Вариантный анализ
+\input{inc/3-sysanalyz} % Системный анализ
+\input{inc/4-varanalyz} % Вариантный анализ
 \input{inc/5-description} % ОПИСАНИЕ РАБОТЫ, ПОКА НЕ ЗНАЮ ЧТО ТУТ
 \input{inc/6-results} % Анализ полученных результатов
 \input{inc/0-conclusion} % Заключение
