Утверждена тема, русифицировал картинки

--- a/inc/0-annotation.tex
+++ b/inc/0-annotation.tex
@@ -1,6 +1,6 @@
 \annotation{Аннотация}
 
-Тема выпускной квалификационной работы магистра --- <<Исследование безопасности облачных сред>>.
+Тема выпускной квалификационной работы магистра --- <<Исследование процессов обеспечения безопасности облачных сред>>.
 
 Ключевые слова: безопасность, облачные вычисления, виртуализация, уязвимости, защита информации, стандартизация.
 
