--- a/inc/0-bibliography.tex
+++ b/inc/0-bibliography.tex
@@ -23,8 +23,9 @@
     Изд-во СевНТУ, 2008. -- 28 с.
 
 \bibitem{nist}
-    Hogan, M., Liu, F., Sokol, A., Tong, J.
+    Hogan, M.
     NIST Cloud Computing Standarts Roadmap /
+    M. Hogan, F. Liu, A. Sokol, J. Tong //
     NIST Special Publication 500-291, Version 2
     Roadmap Working Group, 2013. -- 113 с.
 
@@ -71,8 +72,9 @@
     (Дата обращения: 05.01.2017)
 
 \bibitem{greendc}
-    Kaplan, J., Forrest, W., Kindler, N.
-    Revolutionizing data center energy efficiency. //
+    Kaplan, J.
+    Revolutionizing data center energy efficiency /
+    J. Kaplan, W. Forrest, N. Kindler //
     Technical report, McKinsey \& Company, 2008. -- 15 с.
 
 \end{thebibliography}
