--- a/inc/1-pz.tex
+++ b/inc/1-pz.tex
@@ -1,6 +1,6 @@
 \section{Постановка задачи}
 
-Конечной задачей выпускной квалификационной работы магистра на тему <<Исследование безопасности облачных сред>> является подробный анализ стандартов безопасности облачных вычислений, варианты решения данных проблем, а также технические возможности практической эксплуатации уязвимостей на нескольких уровнях работы облачной инфраструктуры.
+Конечной задачей выпускной квалификационной работы магистра на тему <<Исследование процессов обеспечения безопасности облачных сред>> является подробный анализ стандартов безопасности облачных вычислений, варианты решения данных проблем, а также технические возможности практической эксплуатации уязвимостей на нескольких уровнях работы облачной инфраструктуры.
 
 Исследования должны состоять из следующих частей:
 \begin{itemize}
