--- a/inc/2-literature.tex
+++ b/inc/2-literature.tex
@@ -16,7 +16,7 @@
 
 Облачные вычисления являются результатом объединения большого количества технологий и связующего ПО для обеспечения ресурсов, необходимых для решения задачи, балансировки процессов, мониторинга, автоматизации и прочего.
 
-Основными отличиями предоставления облачных услуг от <<классических>> являются (рис. \ref{cloud-tech}):
+Основными отличиями предоставления облачных услуг от <<классических>> являются:
 \begin{itemize}
   \item виртуализация;
   \item оркестратор;
@@ -24,8 +24,6 @@
   \item портал самообслуживания;
   \item система тарификации и выставления счетов (биллинг).
 \end{itemize}
-
-\addimg{cloud-tech}{0.85}{Составные части облачных вычислений}{cloud-tech}
 
 В вычислениях, виртуализация является процессом создания виртуальной (не физической) версии чего-либо, в том числе аппаратных платформ виртуального компьютера, операционных систем, устройств хранения данных и вычислительных ресурсов.
 
