Добавлен раздел по угрозам безопасности

--- a/inc/0-bibliography.tex
+++ b/inc/0-bibliography.tex
@@ -64,6 +64,13 @@
     Режим доступа: https://goo.gl/cmDSMB
     (Дата обращения: 30.12.2016)
 
+\bibitem{csa}
+    Cloud Security Alliance Releases 'The Treacherous Twelve' Cloud Computing Top Threats in 2016
+    [Электронный ресурс] //
+    Cloud Security Alliance Research Group
+    Режим доступа: https://goo.gl/l2aWLu
+    (Дата обращения: 11.01.2017)
+
 \bibitem{cnewsdc}
     ИТ-инфраструктура предприятия 2010: Пути оптимизации
     [Электронный ресурс] //
