--- a/inc/0-glossary.tex
+++ b/inc/0-glossary.tex
@@ -68,6 +68,8 @@
 
 \hypertarget{iot}{IoT --- Internet of Things, интернет вещей}
 
+\hypertarget{ddos}{DDoS --- Distributed Denial of Service, распределенная атака на отказ}
+
 \hypertarget{sdn}{SDN --- Software-defined Networking, программно-определяемая сеть}
 
 \hypertarget{aes}{АЭС --- атомная электростанция}
