Добавлен листинг эксплоита

--- a/inc/0-bibliography.tex
+++ b/inc/0-bibliography.tex
@@ -34,7 +34,7 @@
     Ponemon Insitute LLC, 2016. -- 40 с.
 
 \bibitem{itmo}
-    Беккер, М.Я.,
+    Беккер, М.Я.
     Информационная безопасность при облачных вычислениях: проблемы и перспективы /
     М.Я. Беккер, Ю.А. Гатчин, Н.С. Кармановский, А.О. Терентьев, Д.Ю. Федоров //
     Научно-технический вестник Санкт-Петербургского государственного университета информационных технологий, механики и оптики. -- 2011. -- №1(71). -- С. 97-102.
