--- a/main.tex
+++ b/main.tex
@@ -35,9 +35,15 @@
 \addcontentsline{toc}{section}{\listfigurename}
 \clearpage
 
+% Список таблиц
+\phantomsection
+\listoftables
+\addcontentsline{toc}{section}{\listtablename}
+\clearpage
+
 % Приложения
-%\input{inc/a-app} % НАЗВАНИЕ ПРИЛОЖЕНИЯ 1
-%\input{inc/b-app} % НАЗВАНИЕ ПРИЛОЖЕНИЯ 2
+\input{inc/a-app} % НАЗВАНИЕ ПРИЛОЖЕНИЯ 1
+\input{inc/b-app} % НАЗВАНИЕ ПРИЛОЖЕНИЯ 2
 
 \end{document}
 %%% Конец документа
