--- a/preamble.tex
+++ b/preamble.tex
@@ -98,6 +98,10 @@
 \renewcommand{\cftfigfont}{Рисунок }
 \addto\captionsrussian{\renewcommand\listfigurename{Список иллюстративного материала}}
 
+% Список таблиц
+\renewcommand{\cftlottitlefont}{\hspace{0.33\textwidth}\MakeTextUppercase}
+\renewcommand{\cfttabfont}{Таблица }
+
 % Нумерация страниц справа сверху
 \usepackage{fancyhdr}
 \pagestyle{fancy}
