--- a/inc/a-app.tex
+++ b/inc/a-app.tex
@@ -1,8 +1,34 @@
 \appsection{Приложение А}
-\centering{\uppercase{НАЗВАНИЕ ПРИЛОЖЕНИЯ 1}}
+\centering{\uppercase{Министерство образования и науки Российской Федерации}}
+
+\centering{\uppercase{Федеральное государственное автономное образовательное учреждение высшего образования}}
+
+\centering{\uppercase{<<Севастопольский государственный университет>>}}
+
+\vspace{\baselineskip}
 \vspace{\baselineskip}
 
-Тут какой-нибудь текст или код или картинки
+\raggedleft{\uppercase{Утвержден}}
+
+\vspace{\baselineskip}
+\vspace{\baselineskip}
+
+\centering{Программа эксплуатации уязвимости CVE-2016-5195}
+
+\vspace{\baselineskip}
+\vspace{\baselineskip}
+
+\centering{\uppercase{Описание программы}}
+
+\vspace{\baselineskip}
+
+\centering{Листов --- 8}
+
+\vfill
+
+\centering{2017}
+
+\clearpage
 
 \lstinputlisting[numbers=left]{inc/src/dcow.cpp}
 
