--- a/main.tex
+++ b/main.tex
@@ -35,7 +35,7 @@
 \addcontentsline{toc}{section}{\listfigurename}
 \clearpage
 
-% Список таблиц
+% Список табличного материала
 \phantomsection
 \listoftables
 \addcontentsline{toc}{section}{\listtablename}
