--- a/preamble.tex
+++ b/preamble.tex
@@ -98,9 +98,10 @@
 \renewcommand{\cftfigfont}{Рисунок }
 \addto\captionsrussian{\renewcommand\listfigurename{Список иллюстративного материала}}
 
-% Список таблиц
-\renewcommand{\cftlottitlefont}{\hspace{0.33\textwidth}\MakeTextUppercase}
+% Список табличного материала
+\renewcommand{\cftlottitlefont}{\hspace{0.2\textwidth}\MakeTextUppercase}
 \renewcommand{\cfttabfont}{Таблица }
+\addto\captionsrussian{\renewcommand\listtablename{Список табличного материала}}
 
 % Нумерация страниц справа сверху
 \usepackage{fancyhdr}
