--- a/main.tex
+++ b/main.tex
@@ -42,7 +42,7 @@
 \clearpage
 
 % Приложения
-\input{inc/a-app} % НАЗВАНИЕ ПРИЛОЖЕНИЯ 1
+\input{inc/a-app} % Программа эксплуатации уязвимости CVE-2016-5195
 \input{inc/b-app} % НАЗВАНИЕ ПРИЛОЖЕНИЯ 2
 
 \end{document}
