Номер страницы посередине. Списки материалов вынесены в преамбулу. Полные названия приложений в содержании. Исправлены отступы заголовков для анонсекций.

--- a/inc/a-app.tex
+++ b/inc/a-app.tex
@@ -1,4 +1,4 @@
-\appsection{Приложение А}
+\appsection{Приложение А}{Программа эксплуатации уязвимости CVE-2016-5195}
 \centering{\uppercase{Министерство образования и науки Российской Федерации}}
 
 \centering{\uppercase{Федеральное государственное автономное образовательное учреждение высшего образования}}
