--- a/inc/b-app.tex
+++ b/inc/b-app.tex
@@ -1,4 +1,4 @@
-\appsection{Приложение Б}
+\appsection{Приложение Б}{НАЗВАНИЕ ПРИЛОЖЕНИЯ 2}
 \centering{\uppercase{НАЗВАНИЕ ПРИЛОЖЕНИЯ 2}}
 \vspace{\baselineskip}
 
