--- a/main.tex
+++ b/main.tex
@@ -30,20 +30,16 @@
 \input{inc/0-bibliography} % Библиографический список
 
 % Список иллюстративного материала
-\phantomsection
-\listoffigures
-\addcontentsline{toc}{section}{\listfigurename}
+\lof
 \clearpage
 
 % Список табличного материала
-\phantomsection
-\listoftables
-\addcontentsline{toc}{section}{\listtablename}
+\lot
 \clearpage
 
 % Приложения
 \input{inc/a-app} % Программа эксплуатации уязвимости CVE-2016-5195
-\input{inc/b-app} % НАЗВАНИЕ ПРИЛОЖЕНИЯ 2
+%\input{inc/b-app} % НАЗВАНИЕ ПРИЛОЖЕНИЯ 2
 
 \end{document}
 %%% Конец документа
