--- a/inc/a-app.tex
+++ b/inc/a-app.tex
@@ -28,8 +28,8 @@
 
 \centering{2017}
 
-\clearpage
+%\clearpage
 
-\lstinputlisting[numbers=left]{inc/src/dcow.cpp}
+%\lstinputlisting[numbers=left]{inc/src/dcow.cpp}
 
 \clearpage
