--- a/main.tex
+++ b/main.tex
@@ -38,7 +38,7 @@
 \clearpage
 
 % Приложения
-\input{inc/a-app} % Программа эксплуатации уязвимости CVE-2016-5195
+%\input{inc/a-app} % Программа эксплуатации уязвимости CVE-2016-5195
 %\input{inc/b-app} % НАЗВАНИЕ ПРИЛОЖЕНИЯ 2
 
 \end{document}
