Добавлен раздел безопасности облачных вычислений

--- a/inc/0-glossary.tex
+++ b/inc/0-glossary.tex
@@ -72,6 +72,32 @@
 
 \hypertarget{sdn}{SDN --- Software-defined Networking, программно-определяемая сеть}
 
-\hypertarget{aes}{АЭС --- атомная электростанция}
+\hypertarget{spi}{SPI --- Secutiry Parameter Index, индекс параметра обеспечения безопасности}
+
+\hypertarget{bgp}{BGP --- Border Gateway Protocol, протокол граничного шлюза}
+
+\hypertarget{asn}{ASN --- автономная сетевая система}
+
+\hypertarget{dns}{DNS --- Domain Name System, система доменных имен}
+
+\hypertarget{ntp}{NTP --- Network Time Protocol, протокол сетевого времени}
+
+\hypertarget{snmp}{SNMP --- Simple Network Management Protocol, простой протокол сетевого управления}
+
+\hypertarget{nda}{NDA --- Non-disclosure agreement, соглашение о неразглашении}
+
+\hypertarget{ssh}{SSH --- Secure Shell, безопасная оболочка}
+
+\hypertarget{sql}{SQL --- Structured Query Language, язык структурированных запросов}
+
+\hypertarget{xss}{XSS --- Cross-Site Scripting, межсайтовый скриптинг}
+
+\hypertarget{ftp}{FTP --- File Transfer Protocol, протокол передачи данных}
+
+\hypertarget{ssl}{SSL --- Secure Sockets Layer, уровень защищенных cокетов}
+
+\hypertarget{http}{HTTP --- HyperText Transfer Protocol, протокол передачи гипертекста}
+
+\hypertarget{scp}{SCP --- Secure Copy Program}
 
 \clearpage
