--- a/inc/0-bibliography.tex
+++ b/inc/0-bibliography.tex
@@ -84,6 +84,76 @@
     J. Kaplan, W. Forrest, N. Kindler //
     Technical report, McKinsey \& Company, 2008. -- 15 с.
 
+\bibitem{amazon}
+    Amazon's data storage service hit by outage
+    [Электронный ресурс] //
+    ComputerWorld from IDG
+    Режим доступа: https://goo.gl/5nM27I
+    (Дата обращения: 08.02.2017)
+
+\bibitem{gmail}
+    Google's Gmail hit with two-hour outage
+    [Электронный ресурс] //
+    ComputerWorld from IDG
+    Режим доступа: https://goo.gl/OCKJd5
+    (Дата обращения: 08.02.2017)
+
+\bibitem{azure}
+    Microsoft's Azure cloud suffers first crash
+    [Электронный ресурс] //
+    The Register
+    Режим доступа: https://goo.gl/yMdwtJ
+    (Дата обращения: 08.02.2017)
+
+\bibitem{linkup}
+    Loss of customer data spurs closure of online storage service 'The Linkup'
+    [Электронный ресурс] //
+    NetworkWorld from IDG
+    Режим доступа: https://goo.gl/FscSuW
+    (Дата обращения: 08.02.2017)
+
+\bibitem{aws}
+    AWS signature version 1 is insecure
+    [Электронный ресурс] //
+    Daemonic Dispatches
+    Режим доступа: https://goo.gl/70bggH
+    (Дата обращения: 08.02.2017)
+
+\bibitem{cis}
+    The CIS Critical Security Controls for Effective Cyber Defense
+    [Электронный ресурс] //
+    SANS website
+    Режим доступа: https://goo.gl/pMjbNE
+    (Дата обращения: 08.02.2017)
+
+\bibitem{owasp}
+    OWASP Top Ten Project
+    [Электронный ресурс] //
+    OWASP website
+    Режим доступа: https://goo.gl/kSHOjF
+    (Дата обращения: 08.02.2017)
+
+\bibitem{ls}
+    Data Security Lifecycle 2.0
+    [Электронный ресурс] //
+    Securosis website
+    Режим доступа: https://goo.gl/WMTvlq
+    (Дата обращения: 09.02.2017)
+
+\bibitem{ibm}
+    IBM Discovers Encryption Scheme That Could Improve Cloud Security, Spam Filtering
+    [Электронный ресурс] //
+    eWeek website
+    Режим доступа: https://goo.gl/K4x5Yq
+    (Дата обращения: 09.02.2017)
+
+\bibitem{zap}
+    Data Remanence: Cloud Computing Shell Game
+    [Электронный ресурс] //
+    ZapThinkTank - Sharpening Your Vision of the Future of IT
+    Режим доступа: https://goo.gl/Mn252S
+    (Дата обращения: 09.02.2017)
+
 \end{thebibliography}
 \endgroup
 
