--- a/inc/5-description.tex
+++ b/inc/5-description.tex
@@ -1,5 +1,300 @@
-\section{ОПИСАНИЕ РАБОТЫ, ПОКА НЕ ЗНАЮ ЧТО ТУТ}
+\section{Безопасность облачных вычислений}
 
+Крупные поставщики облачных услуг в своих отчетах сообщали о печальных инцидентах в 2008 и 2009 годах \cite{amazon}.
+Сервис компании Amazon под названием Simple Storage, а также Google Docs подверглись утечке информации пользователей.
+Сервис Gmail, в феврале 2009 года был недоступен более двух часов \cite{gmail}.
+Серьезные уязвимости были обнаружены в программном обеспечении VMware для Mac в мае 2009 года.
+Облачная платформа Azure от компании Microsoft была недоступна 22 часа в марте 2009 года \cite{azure}.
+Подобные серьезные инциденты безопасности могли привести к полному краху облачных услуг поставщиков.
+Поставщик облачных СХД LinkUp допустил потерю 45\% данных пользователей и вынужден был закрыться в августе 2008 года \cite{linkup}.
+
+Меры по контролю безопасности в облаке аналогичны тем, которые существуют в традиционной ИТ-среде.
+Однако облачные вычисления могут столкнуться с различными рисками и вызовами, из-за многопользовательских характеристик, моделей предоставления услуг и моделей развертывания.
+
+\subsection{Проблемы безопасности облачных вычислений}
+
+Безопасность облачных вычислений является частью развития компьютерной и сетевой безопасности, а также, в более широком плане информационной безопасности.
+
+\subsubsection{Безопасность облачных вычислений}
+
+Безопасность относится к широкому набору стратегий, технологий и средств управления, использующихся для защиты данных и приложений, а также связанной с ней инфраструктуры облачных вычислений.
+Она представляет собой ответ на знакомый набор вызовов безопасности, проявляющихся в облаке.
+Безопасность содержит набор политик, технологий и средств управления, предназначенных для защиты данных, инфраструктуры и клиентов от нападения, она позволяет соответствовать нормативным требованиям.
+Большая безопасность обеспечивается при использовании многоуровневого подхода, когда каждый уровень интегрирован в общую систему управления, таким образом обеспечивается защита независимо от модели доставки.
+
+\subsubsection{Вопросы безопасности в соответствии с SPI}
+
+Безопасности инфраструктуры в соответствии с индексом параметра обеспечения безопасности (\hyperlink{spi}{SPI}) соответствуют безопасность уровня сети, уровня хоста и уровня приложений.
+Инфраструктура безопасности в большей степени применима для IaaS-клиентов, но также может быть применена для PaaS и SaaS, поскольку они имеют последствия для риска и соответствия руководству клиентов.
+
+На сетевом уровне важно проводить различие между публичными и частными облаками.
+В частных облаках нет никаких новых атак, уязвимостей или изменений риска, которые должны быть приняты во внимание.
+С другой стороны, в публичных облаках, сети клиентов и облачного провайдера должны взаимодействовать между собой, что вносит изменения в требования безопасности.
+
+Существует несколько факторов риска в этом:
+\begin{itemize}
+  \item обеспечение конфиденциальности и целостности данных;
+  \item обеспечение надлежащего контроля доступа (аутентификации, авторизации и аудита);
+  \item обеспечение доступности интернет-ресурсов;
+  \item замена установленной модели сетевых зон и уровней с доменами.
+\end{itemize}
+
+Данные, поступающие от поставщика публичного облака проходят через Интернет и это необходимо учитывать при обеспечении их конфиденциальности и целостности.
+Примером является Amazon Web Services, где в декабре 2008 года использовался протокол HTTP вместо HTTPS, таким образом увеличивая риск изменения данных без ведома пользователя \cite{aws}.
+
+Отсутствие операций аудита сети облачного провайдера уменьшает доступ клиента к соответствующим журналам сети и данным.
+Этот фактор риска может привести к повторному использованию IP-адресов, которые находятся в кэше DNS и могут ввести в заблуждение пользователей.
+
+Еще одним из факторов риска является \hyperlink{bgp}{BGP}-перехват (префиксный перехват или перехват маршрута) является незаконным поглощением групп IP-адресов, повреждая интернет-таблицы маршрутизации.
+Из-за ошибки конфигурации, можно присвоить себе автономную систему (\hyperlink{asn}{ASN}) без разрешения владельца.
+Возможно и преднамеренное присвоение ASN, но это случается гораздо реже.
+
+Перехват префикса не является чем-то новым, однако из-за более широкого использования облачных вычислений, доступность облачных ресурсов увеличивается, а значит увеличивается количество мишеней для атак.
+Атаки на систему доменных имен (\hyperlink{dns}{DNS}) также не являются чем-то новым, однако и она представляет угрозу в сети из-за увеличения количества внешних DNS-запросов.
+В дополнение к уязвимости в протоколе DNS и его реализации, кэш DNS может подвергаться атакам.
+DNS-север может принимать некорректную информацию таким образом, что имя сервера целевого домена перенаправляется на другой целевой домен.
+DDoS также активно используется в атаках на IaaS.
+В таких протоколах как DNS, \hyperlink{ntp}{NTP}, \hyperlink{snmp}{SNMP} используется атака, при которой на маленький запрос к серверу генерируется огромный ответ, таким образом даже небольшим количеством ресурсов можно добиться, что весь сетевой канал будет занят паразитным трафиком.
+Кроме внешних атак, внутренний DDoS-атаки могут быть осуществлены через сеть поставщика IaaS-услуг.
+Скорее всего провайдер не контролирует подобное, поэтому предотвращение таких инцидентов может занять много времени.
+Только клиенты могут предотвратить атаки такого характера.
+
+Традиционная сетевая безопасность зависит от изоляции модели сетевых зон и уровней, где пользователи и системы имеют доступ только к определенным зонам.
+Тем не менее, эта модель не может быть применена к публичным облакам IaaS и PaaS, но этот подход можно заменить в публичных облаках так называемыми <<группами безопасности>>, <<доменами безопасности>> или <<виртуальными центрами обработки данных>>.
+Эти группы безопасности могут позволить виртуальным машинам иметь доступ друг к другу с помощью виртуального межсетевого экрана, фильтрации трафика на основе IP-адреса, типов пакетов и портов.
+Кроме того, приложения логически сгруппированы на основе имен доменов.
+
+Вопросы безопасности промежуточного узла (хоста) тесно связаны с различными моделями предоставления облачных услуг и моделей развертывания.
+Хотя нет никаких новых угроз для хостов, которые являются специфическими для облачных вычислений, некоторые угрозы безопасности виртуализации (побег из виртуальной машины, слабый контроль над гипервизором, ошибки в конфигурации системы) сопровождаются последствиями.
+Эластичность облака может принести новые оперативные задачи с точки зрения обеспечения безопасности, которые могут быть гораздо сложнее обычных.
+
+Так как злоумышленники могут использовать знания о конфигурации облака для вторжения в облачные сервисы, провайдеры облачных услуг публично не делятся информацией о используемых платформах, операционных системах и процессах.
+Таким образом, безопасность хоста не может быть детально известна пользователям и вся ответственность за обеспечение безопасности лежит на поставщике облачных услуг.
+Клиенты могут попросить провайдера обмениваться информацией в рамках соглашения о неразглашении (\hyperlink{nda}{NDA}), либо с помощью механизма оценки управления --- ISO/IEC 27002 или SysTrust, чтобы дать клиенту гарантию.
+Для обеспечения виртуализации, поставщик облачных услуг использует гипервизоры Xen и VMWare, которые являются bare-metal гипервизорами, то есть включены в состав существующей операционной системы.
+Таким образом уровень абстракции предоставляется пользователю, при этом скрывая операционную систему хоста от конечных пользователей.
+В случае SaaS, этот слой доступен только для разработчиков и персонала провайдера, а в случае PaaS, клиенты используют PaaS API, который взаимодействует с принимающим уровнем абстракции.
+Хотя поставщик облачных услуг несет ответственность за безопасность хоста для SaaS и PaaS услуг, клиент может управлять рисками хранения информации, размещенной в облаке.
+
+При использовании IaaS, клиенты сами несут ответственность за безопасность, которая может быть отнесена к категории безопасности программного обеспечения и безопасности виртуального сервера.
+
+Управление программным обеспечением для виртуализации относится к провайдеру, в то время как клиенты не имеют доступа к этому программному обеспечению, особенно если это публичное облако.
+Виртуализация аппаратного обеспечения или операционной системы позволяет совместно использовать ресурсы на нескольких гостевых виртуальных машинах одновременно и не мешая друг другу.
+Виртуализации уровня хоста может быть осуществлено с использованием гипервизоров первого уровня, таких как VMWare ESX, Xen, Oracle VM, Hyper-V.
+
+Клиенты имеют полный доступ к виртуальному экземпляру операционной системы, который виден из Интернета и изолирован от других экземпляров технологиями гипервизора.
+В таком случае безопасность и управление безопасностью лежит на пользователе.
+Публичные IaaS могут быть очень уязвимыми и стать жертвами новых направлений мошенничества, таких как кража закрытых \hyperlink{ssh}{SSH}-ключей для доступа к хосту, кража счетов, атака на брандмауэры, развертывание троянов в виртуальных машинах.
+Для обеспечения высокого уровня безопасности виртуального сервер должны использоваться сильные операционные процедуры в сочетании с автоматизацией процедур:
+\begin{itemize}
+  \item использование безопасной по умолчанию конфигурации --- построение пользовательских образов виртуальных машин, которые имеют только возможности и услуги, необходимые для поддержки стека приложений;
+  \item отслеживание обновлений гостевых операционных систем;
+  \item защита целостности шаблонов от несанкционированного доступа;
+  \item хранение закрытых ключей в безопасном месте;
+  \item для доступа к командной оболочке не использовать пароли, а только SSH-ключи;
+  \item периодически просматривать журналы для анализа подозрительных действий.
+\end{itemize}
+
+Безопасность приложений является одним из важнейших элементов безопасности инфраструктуры.
+Проектирование и внедрение приложений для облачной платформы требуют совершенствования существующей практики и стандартов для существующих программ безопасности приложений.
+Приложения варьируются от автономных однопользовательских приложений до сложных приложений электронной коммерции, многопользовательских, используемых миллионами пользователей, но наиболее уязвимыми являются веб-приложения.
+Так как браузер появился в качестве клиента конечного пользователя для доступа к облачным приложениям, важно, чтобы безопасность браузера была включена в сферу безопасности приложений.
+Таким образом, пользователям рекомендуется регулярно проверять обновления браузера для поддержания безопасности.
+
+Согласно некоторым исследованиям, почти половина уязвимостей относится к веб-приложениям \cite{cis}.
+Рейтинг OWASP Top 10 показывает, что основными угрозами для безопасности приложений являются \hyperlink{sql}{SQL}-инъекции, межсайтовый скриптинг (\hyperlink{xs}{XSS}), взломанные сессии, небезопасные ссылки, злонамеренное исполнение файлов и другие уязвимости, которые являются результатом ошибок программирования и конструктивных недостатков \cite{owasp}.
+
+Веб-приложения, созданные и развернутые на платформе открытого облака легко сканировать, обладая соответствующими знаниями и инструментами злоумышленника, поэтому эти приложения должны быть разработаны в соответствии с моделью безопасности.
+Приложения должны включать в себя полный цикл разработки программного обеспечения, с проектированием, кодированием, тестированием и выпуском.
+
+Ответственность за безопасность веб-приложений в облаке лежит как на поставщике облачных услуг, так и на пользователе и зависят от модели доставки облачных сервисов и соглашении об уровне обслуживания.
+В модели SaaS, поставщик услуг в основном отвечает за свою собственную безопасность приложений, в то время как клиент отвечает за оперативные функции безопасности и управления пользователями и доступом.
+Интересная проблема заключается в функции аутентификации и контроле доступа, предлагаемыми поставщиком SaaS.
+Различные поставщики предлагают разные методы: веб-инструменты администрирования пользовательского интерфейса для управления аутентификацией и управления доступом приложения (Salesforce, Google), встроенные функции, которые пользователи могут вызывать, назначать привилегии чтения и записи другим пользователям (Google Apps).
+Пользователи должны принять эти механизмы контроля доступа, а также включать в себя управление привилегиями на основе ролей и функций пользователя и реализовать политику надежного пароля.
+
+Так как PaaS-облака поддерживают не только среду, но и собственные приложения пользователя, безопасность приложений можно разделить на два уровня: безопасность платформы PaaS и безопасность клиентских приложений, развернутых на PaaS.
+Поставщики облачных услуг несут ответственность за обеспечение работы стека программного обеспечения или гарантируют безопасность приложений сторонних разработчиков.
+Они также отвечают за мониторинг новых ошибок и уязвимостей и мониторинг совместно-используемой сетевой и системной инфраструктуры приложений.
+Разработчики PaaS должны разбираться в API конкретных облачных провайдеров и его функции безопасности: объекты безопасности и веб-сервисы для настройки аутентификации и авторизации инструментов в приложениях.
+
+В IaaS, пользователи имеют полный контроль над своими приложениями, потому что весь стек ПО работает на виртуальных серверах клиента, и от провайдера облачных услуг они должны получать только основные рекомендации со ссылкой на политику брандмауэра.
+Веб-приложения, развернутые в публичном IaaS-облаке должны быть разработаны для модели Интернет, и должны периодически проверяться на наличие уязвимостей.
+Разработчики IaaS должны реализовать свои собственные функции для обработки аутентификации и авторизации и должны сделать их применение благоприятной для сервисных функций аутентификации.
+
+\subsection{Проблемы безопасности облачных вычислений}
+
+Идея защиты данных в облаке аналогична традиционной безопасности данных, но из-за открытости и мультитенантности, безопасность данных в облаке имеет свою специфику.
+
+\subsubsection{Жизненный цикл данных}
+
+Жизненный цикл данных относится ко всему процессу от его создания и до разрушения.
+Жизненный цикл данных делится на шесть этапов (рис. \ref{lifecycle}) \cite{ls}.
+
+\addimg{lifecycle}{0.8}{ Жизненный цикл безопасности данных}{lifecycle}
+
+Создание является генерацией нового или модификацией существующего элемента цифровых данных, поэтому этот цикл может быт назван <<создание или обновление данных>>.
+Это может быть любой вид контента, а не просто документ или база данных, и может быть структурированным или неструктурированным.
+На этом этапе информация является секретной.
+
+Хранение является актом представления цифровых данных в структурированном или неструктурированном виде (базы данных или файлы), как правило, процесс происходит одновременно с созданием.
+Здесь классификация и права на управления безопасностью отображаются, включая контроль доступа, шифрование и управление правами.
+
+В цикле использования данные рассматриваются, обрабатываются или иным образом используются в какой-либо деятельности, не включая модификации.
+Эти средства управления применяются к данным в момент использования, как правило, пользователя или приложения.
+Существуют средства управления, такие как мониторинг деятельности, превентивное управление, управление правами и логические элементы управления, которые обычно применяются в базах данных и приложениях.
+
+В процессе распространения данные становятся доступными для других и обмениваются между пользователями, клиентами и партнерами.
+Эти элементы управления включают в себя сочетание обнаружительного и превентивного контроля, шифрование для безопасного обмена данными, а также логические средства управления и безопасности приложений.
+
+На этапе архивации данные мало используются и входят долгосрочное хранение.
+Здесь защита данных и их доступность обеспечивается с помощью комбинации шифрования и управления активами.
+
+Данные могут быть уничтожены с помощью физических или цифровых средств.
+Данные должны быть удалены бесследно, необходимо использовать инструменты отслеживая любых копий.
+
+\subsubsection{Аспекты безопасности данных}
+
+Обеспечение безопасности данных в облаке требует различных подходов и хорошего понимания на различных этапах передачи данных:
+\begin{itemize}
+  \item данные в пути;
+  \item данные в состоянии покоя;
+  \item обработка данных;
+  \item родословная данных;
+  \item происхождение данных;
+  \item остаточные данные.
+\end{itemize}
+
+Первые три этапа можно сравнить с тривиальным примером использования электронной почты, где отправка электронного сообщения представляет данные в процессе их перевозки, данные в состоянии покоя электронной почты в почтовом ящике и обработка данных относится к печатаемому ответу.
+
+Рекомендуется защищать данные с помощью передачи с использованием алгоритмов шифрования имеющих необходимые допуски, особенно при использовании публичного облака.
+Использование зашифрованных данных по незащищенному протоколу может обеспечить конфиденциальность, но не обеспечивает целостность данных.
+Следовательно, необходимо использовать протокол, который будет обеспечивать целостность и конфиденциальность данных, например, \hyperlink{ftp}{FTP} через \hyperlink{ssl}{SSL} (FTPS), безопасный протокол передачи гипертекста (\hyperlink{http}{HTTP/2}) или Secure Copy Program для SSH (\hyperlink{scp}{SCP}).
+
+Шифровать данные в состоянии покоя не так просто, как данные в пути.
+Шифрование возможно при использовании облачного IaaS-сервиса для хранения данных, но использование шифрования в PaaS и SaaS не всегда осуществимо, поскольку он препятствует индексации и поиску этих данных.
+Однако, когда приложение работает с обработкой данных, эти данные должны быть в незашифрованном виде, и это сценарий, при котором данные организации, не шифруются.
+На данный момент полностью гомоморфная схема шифрования все еще разрабатывается \cite{ibm}, однако это сложно осуществить, так как требуются значительные вычислительные мощности.
+
+Более сложной проблемой для клиентов является предоставление данных, что означает не только доказательство целостности данных, но более конкретное происхождение данных.
+Происхождение данных представляет собой вид метаданных, содержащий историю данных, начиная от первоначальных источников в хранилище данных.
+
+Последний аспект безопасности данных является остаточная информация --- остаточное представление цифровых данных, которое сохраняется даже после попытки удалить или стереть данные.
+Некоторые операционные системы не удаляют данные немедленно, когда пользователь делает запрос на удаление, система перемещает его в зону ожидания, откуда данные можно для легко восстановить от возможного сбоя или ошибки.
+На обычных жестких дисках есть остаточная намагниченность, которую можно устранить большим количеством циклов перезаписи.
+
+Облачные вычисления с ее использованием виртуализации усложняет остаточную намагниченность данных.
+Перезапись физических носителей практически невозможна, так как облачная инфраструктура может распределять данные клиента или экземпляр виртуальной машины на несколько физических дисков.
+Кроме того, данные, записанные на отдельных дисках остаются до тех пор, пока провайдер перераспределяет сектора.
+Для задачи получения данных из облака, первая рекомендация состоит в том, чтобы зашифровать данные, прежде чем они будут храниться в облаке.
+Получение ключей, рекомендуется осуществлять локально.
+Используя эти рекомендации, данные могут быть надежно удалены путем простого удаления ключа.
+Такой подход является достаточным, если облако используется только для хранения зашифрованных данных, а не для его обработки, так как данные должны быть расшифрованы \cite{zap}.
+
+\iffalse
+\begin{equation}
+\Psi = (C, P, U, S, H, I, R, Rp, Soft, Id, Im, Role)
+\end{equation}
+
+C --- граф всех сетевых связей между всеми узлами внутренней сети облака и
+виртуальными машинами
+
+V --- множество ВМ
+
+N --- множество хостов внутренней сети
+
+M --- множество машин $M = V \cup N$
+
+O --- множество файлов образов ВМ
+
+R --- множество ролей хостов в облаке $\{VmHost, Storage, Controller\} \subseteq R$
+
+P --- множество всех программ и ВМ в облаке
+
+U --- множество всех пользователей облака
+
+S --- множество всех субъектов в облаке
+
+Role --- распределение ролей хостов в облаке $Role:N \rightarrow P(R)$
+
+H --- распределения ВМ по хостам $H \subseteq V \times N$
+
+I --- распределение образов ВМ по хостам $I \subseteq V \times P(N)$
+
+F --- распределение ВМ по файлам образов $F \subseteq V \times P(O)$
+
+Rp --- отношение репликации работы ВМ $Rp \subseteq V \times P(N)$
+
+Soft --- распределение программ по машинам $Soft \subseteq M \times P(P)$
+
+Id --- отношение идентификации $Id \subseteq P \times P(S)$
+
+Im --- отношение имперсонализации $Im \subseteq P \times S$
+
+Использование виртуальных машин в качестве узлов сети в облаке:
+\begin{equation}
+V \subseteq M
+\end{equation}
+
+Миграция виртуальных машин:
+\begin{equation}
+H^{\tilde{\psi}} = H^{\psi} (v_i, n_j) \cup (v_i, n_k), v_i \in V^{\psi}, n_j \in N^{\psi}, n_k \in N^{\psi}
+\end{equation}
+
+Репликация работы виртуальных машин:
+\begin{equation}
+Rp \subseteq V \times P(N)
+\end{equation}
+
+Виртуальная машина – программа, работающая под управлением гипервизора.
+В каждой виртуальной машине также выполняются программы:
+\begin{equation}
+\left\{\begin{matrix}
+V \subseteq P \\
+\forall v_j \in V : \exists P_{v_j} \subset P,(v_j,P_{v_j}) \in Soft
+\end{matrix}\right.
+\end{equation}
+
+Для любой программы в виртуальной машине существует по крайней мере два субъекта в облаке:
+\begin{multline}
+\forall v_i \in V, n_j \in N, P_{v_i} \in P, p_{v_i} \in P_{v_i}, (v_i, n_j) \in H, (v_i, P_{v_i}) \in Soft : \\
+\exists s_v, s_v, \{s_v, s_v\} \subset S_u, (v_i, s_n) \in Id \wedge (p_{v_i}, s_v) \in Id
+\end{multline}
+
+$s_v$ --- субъект, который соответствует программе, запущенной в виртуальной машине
+
+$s_n$ --- субъект, который соответствует программе, запущенной на хосте
+
+Разделение среды хранения и выполнения виртуальных машин:
+\begin{equation}
+\forall v_i \exists N_{v_i} \subseteq N :
+(v_i, N_{v_i}) \in I \nexists n_j \in N_{v_i}, VmHost \in Role(n_j)
+\end{equation}
+
+Возможность объединять виртуальные машины в изолированные виртуальные сети:
+
+$C_v \subset C$ --- несвязный граф виртуальных машин
+
+Все виртуальные машины в облаке идентифицируются в гипервизорах только субъектами, которые принадлежат множеству пользователей, работающих в этих виртуальных машинах:
+\begin{multline}
+\forall v_i \in V, s_v \in S, n_j \in N, P_v \subset P, (v_i, n_j) \in H, (v_i, P_v) \in Soft : \\
+\nexists p_k \in P_v, s_k \in S, (p_k, s_k) \in Id  \wedge \{s_v, s_k\} \in S_u \wedge (u, S_u) \in Im
+\end{multline}
+\fi
+
+\iffalse
+chapter2 kostadinovska
+2.1.1
+2.1.2
+2.1.4
+2.2
+
+зегжда ОБЕСПЕЧЕНИЕ БЕЗОПАСНОСТИ
+ВИРТУАЛИЗИРОВАННЫХ СИСТЕМ
+~20стр.
+
+
+-----
 П.С.
 После обзора литературы следующий пункты системный анализ и вариативный анализ.
 Я их буду делать только как закончу основную часть диплома.
@@ -210,4 +505,6 @@ Root password is:   dirtyCowFun
 Enjoy! :-)
 
 \end{lstlisting}
+\fi
+
 \clearpage
