Добавлен раздел по безопасности инфраструктуры Google

--- a/inc/0-bibliography.tex
+++ b/inc/0-bibliography.tex
@@ -154,6 +154,13 @@
     Режим доступа: https://goo.gl/Mn252S
     (Дата обращения: 09.02.2017)
 
+\bibitem{google}
+    Google Infrastructure Security Design Overview
+    [Электронный ресурс] //
+    Google CloudPlatform Documentation
+    Режим доступа: https://goo.gl/rjUiQn
+    (Дата обращения: 10.02.2017)
+
 \end{thebibliography}
 \endgroup
 
