--- a/inc/5-description.tex
+++ b/inc/5-description.tex
@@ -191,6 +191,27 @@ DDoS также активно используется в атаках на Iaa
 Используя эти рекомендации, данные могут быть надежно удалены путем простого удаления ключа.
 Такой подход является достаточным, если облако используется только для хранения зашифрованных данных, а не для его обработки, так как данные должны быть расшифрованы \cite{zap}.
 
+\subsection{Обеспечение безопасности инфраструктуры Google}
+
+В январе 2017 года компания Google опубликовала документ под названием <<Google Infrastructure Security Design Overview>>, в котором она описывает ряд мер, которые предпринимаются компанией для обеспечения безопасности серверной инфраструктуры \cite{google}.
+
+Некоторые особенности:
+\begin{itemize}
+  \item все серверные компоненты, используемые в инфраструктуре, разработаны инженерами Google;
+  \item программные компоненты систем проверяются по цифровой подписи;
+  \item при размещении серверного оборудования в чужих ЦОД, Google использует собственный периметр физической безопасности;
+  \item данные записываются на носители только в зашифрованном виде, при этом шифрование реализуется на аппаратном уровне;
+  \item жизненный цикл каждого накопителя жестко контролируется;
+  \item для обеспечения виртуализации используется модифицированный гипервизор KVM;
+  \item отдельные сервисы в виртуальных машинах изолируются на уровне контейнеров;
+  \item весь программный код компании проходит ряд тщательных проверок, вплоть до ручного рецензирования экспертами по безопасности и криптографии;
+  \item исходные код хранится в одном централизованном репозитории, бинарные файлы используемые в инфраструктуре, могут быть собраны только из определенной ревизии;
+  \item внутренняя сетевая безопасность основана на разделе полномочий на уровне доступа к сервисам;
+  \item обмен данными между сервисами осуществляется только в зашифрованном виде с использованием криптографических идентификаторов;
+  \item персонал использует только двухфакторную аутентификацию и имеет доступ только к разрешенным сервисам;
+  \item действия сотрудников, требующие расширенных привилегий по возможности автоматизированы.
+\end{itemize}
+
 \iffalse
 \begin{equation}
 \Psi = (C, P, U, S, H, I, R, Rp, Soft, Id, Im, Role)
