Добавил пояснения к формулам

--- a/inc/5-description.tex
+++ b/inc/5-description.tex
@@ -205,14 +205,17 @@ DDoS также активно используется в атаках на Iaa
   \item для обеспечения виртуализации используется модифицированный гипервизор KVM;
   \item отдельные сервисы в виртуальных машинах изолируются на уровне контейнеров;
   \item весь программный код компании проходит ряд тщательных проверок, вплоть до ручного рецензирования экспертами по безопасности и криптографии;
-  \item исходные код хранится в одном централизованном репозитории, бинарные файлы используемые в инфраструктуре, могут быть собраны только из определенной ревизии;
-  \item внутренняя сетевая безопасность основана на разделе полномочий на уровне доступа к сервисам;
+  \item исходные коды хранятся в одном централизованном репозитории, бинарные файлы используемые в инфраструктуре, могут быть собраны только из определенной ревизии;
+  \item внутренняя сетевая безопасность основана на разделе полномочий и уровнях доступа к сервисам;
   \item обмен данными между сервисами осуществляется только в зашифрованном виде с использованием криптографических идентификаторов;
   \item персонал использует только двухфакторную аутентификацию и имеет доступ только к разрешенным сервисам;
   \item действия сотрудников, требующие расширенных привилегий по возможности автоматизированы.
 \end{itemize}
 
 \iffalse
+Модель безопасности систем облачных вычислений.
+
+Состояние системы облачных вычислений:
 \begin{equation}
 \Psi = (C, P, U, S, H, I, R, Rp, Soft, Id, Im, Role)
 \end{equation}
@@ -252,6 +255,9 @@ Id --- отношение идентификации $Id \subseteq P \times P(S)
 
 Im --- отношение имперсонализации $Im \subseteq P \times S$
 
+
+Свойства гипервизоров и виртуальных машин в системах облачных вычислений.
+
 Использование виртуальных машин в качестве узлов сети в облаке:
 \begin{equation}
 V \subseteq M
@@ -266,6 +272,18 @@ H^{\tilde{\psi}} = H^{\psi} (v_i, n_j) \cup (v_i, n_k), v_i \in V^{\psi}, n_j \i
 \begin{equation}
 Rp \subseteq V \times P(N)
 \end{equation}
+
+Разделение среды хранения и выполнения виртуальных машин:
+\begin{equation}
+\forall v_i \exists N_{v_i} \subseteq N :
+(v_i, N_{v_i}) \in I \nexists n_j \in N_{v_i}, VmHost \in Role(n_j)
+\end{equation}
+
+Возможность объединять виртуальные машины в изолированные виртуальные сети:
+
+$C_v \subset C$ --- несвязный граф виртуальных машин
+
+Условия безопасности гипервизоров виртуализированных систем.
 
 Виртуальная машина – программа, работающая под управлением гипервизора.
 В каждой виртуальной машине также выполняются программы:
@@ -285,16 +303,6 @@ V \subseteq P \\
 $s_v$ --- субъект, который соответствует программе, запущенной в виртуальной машине
 
 $s_n$ --- субъект, который соответствует программе, запущенной на хосте
-
-Разделение среды хранения и выполнения виртуальных машин:
-\begin{equation}
-\forall v_i \exists N_{v_i} \subseteq N :
-(v_i, N_{v_i}) \in I \nexists n_j \in N_{v_i}, VmHost \in Role(n_j)
-\end{equation}
-
-Возможность объединять виртуальные машины в изолированные виртуальные сети:
-
-$C_v \subset C$ --- несвязный граф виртуальных машин
 
 Все виртуальные машины в облаке идентифицируются в гипервизорах только субъектами, которые принадлежат множеству пользователей, работающих в этих виртуальных машинах:
 \begin{multline}
